--- a/common/css/common.css
+++ b/common/css/common.css
@@ -22,6 +22,16 @@ body.black * {
     --color-text2: rgb(0 0 0 / 45%);
 }
 
+h2 {
+    font-weight: 400;
+    font-size: 30px;
+    margin: 8px 0;
+    color: var(--color-text);
+    border-bottom: var(--color-text) 1px solid;
+    padding: 5px 0;
+    transition: color 2s, border 2s;
+}
+
 #content {
     width: 1200px;
     margin: 0 auto;
@@ -94,6 +104,11 @@ body.black * {
     left: 45px;
     font-size: 26px;
     color: var(--color);
+    text-shadow: rgb(255 255 255 / 45%) 0 0 2px;
+}
+
+.color-card[data-black="1"] .title {
+    text-shadow: rgb(0 0 0 / 45%) 0 0 2px;
 }
 
 .color-card .color {
@@ -157,4 +172,27 @@ body.black * {
 
 .color-rgb-line>.b>div {
     height: var(--b);
+}
+
+footer {
+    color: var(--color-text2);
+    transition: color 2s;
+    position: absolute;
+    bottom: 50px;
+    left: 50px;
+    font-size: 14px;
+}
+
+footer a {
+    color: var(--color-text2);
+    transition: color 2s;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+footer p {
+    margin-top: 0.35em;
 }
