--- a/common/css/common.css
+++ b/common/css/common.css
@@ -113,14 +113,23 @@ h2 {
     position: relative;
     box-shadow: var(--color-bar) 0 0 5px;
     transform: scale(1);
-    transition: box-shadow 2s, transform .3s;
+    transition: box-shadow 2s, transform .3s, margin .3s;
     display: inline-block;
     background-image: linear-gradient(195deg, rgb(233 233 233 / 0%) -80px, rgb(233 233 233 / 35%) 50px, rgb(233 233 233 / 0%) 220px);
     cursor: pointer;
 }
 
+.rotate .color-card {
+    transform: scale(1) rotate(-90deg);
+    margin: -75px 95px;
+}
+
 .color-card:hover {
     transform: scale(1.1);
+}
+
+.rotate .color-card:hover {
+    transform: scale(1.1) rotate(-90deg);
 }
 
 .color-card .title, .color-card .color {
